--- a/mydjango/textblocks/templates/_textblock.html
+++ b/mydjango/textblocks/templates/_textblock.html
@@ -1,4 +1,4 @@
-{% load textblocks %}
+{% load textblocks %}{% load url from future %}
 {% for textblock in textblocks %}
 	{% if perms.textblocks.change_textblock %}
 		{% spaceless %}
@@ -8,7 +8,7 @@
 				<a title="{{textblock.get_name}}" href="{{textblock.get_edit_url}}"
 				onclick="
 				return load_textblock_inline_editor($('textblock_{{textblock.pk}}'),
-				'{% url textblock_edit textblock.pk %}');"
+				'{% url "textblock_edit" textblock.pk %}');"
 				>{{_("edit")}}</a>
 			</div>
 			{% if textblock.html %}
@@ -58,7 +58,7 @@
 				<br/>
 			{% endfor %}
 			<br/>
-			<input type="submit" onclick="return submit_textblock_template('{{position}}_fields_{{template.name}}','{% url admin:textblocks_textblock_add %}');" value="{%blocktrans with template.name as name%}Add {{name}}{% endblocktrans %}"/>
+			<input type="submit" onclick="return submit_textblock_template('{{position}}_fields_{{template.name}}','{% url "admin:textblocks_textblock_add" %}');" value="{%blocktrans with template.name as name%}Add {{name}}{% endblocktrans %}"/>
 		</form>
 		</div>
 	{% endfor %}
