--- a/mydjango/textblocks/templates/_textblock_inline_edit.html
+++ b/mydjango/textblocks/templates/_textblock_inline_edit.html
@@ -5,7 +5,6 @@ var Flext=new Class({Implements:Options,options:{aniTime:300,maxHeight:0,default
 </script>
 <div class="textblock_form" id="editing_{{textblock.id}}">
 	<form method="POST" action="{% url "textblock_save" %}" onsubmit="return submit_textblock_inline_form(this);">
-		{% csrf_token %}
 		<input type="hidden" name="id" value="{{textblock.pk}}"/>
 		<input type="hidden" name="sort_order" value="{{textblock.sort_order}}"/>
 		<input type="hidden" name="position" value="{{textblock.position}}"/>
@@ -16,7 +15,13 @@ var Flext=new Class({Implements:Options,options:{aniTime:300,maxHeight:0,default
 		<input type="submit" value="{{_("Save")}}"/>
 		{{_("or")}}
 		{% if textblock.pk %}
-			<a href="javascript:void()" onclick="$('editing_{{textblock.id}}').getParent().load('{% url "textblock_display" textblock.id %}')">{{_("Cancel")}}</a>
+			<a href="javascript:void()" onclick="_textblock_cancel_editing({{textblock.pk}}, '{% url "textblock_display" textblock.pk %}'); return false;">{{_("Cancel")}}</a>
 		{%endif%}
 	</form>
+	{% if can_delete %}
+	<form method="POST" action="{% url "textblock_delete" textblock.pk %}" onsubmit="if (confirm('{{_("Are you sure you want to delete this text block?")}}')) return submit_textblock_inline_form(this); else return false;">
+		<input type="submit" value="{{_("Delete")}}"/>
+    </form>
+    {% endif %}
 </div>
+{#  #}
