repositioned textblock buttons

--- a/mydjango/textblocks/templates/_textblock_scripts.html
+++ b/mydjango/textblocks/templates/_textblock_scripts.html
@@ -16,9 +16,14 @@
     background-color: #2C4999;
     border-radius: 5px;
     padding: 5px;
+    opacity: .5;
     /*	width: 100px;*/
     border: 1px solid #132145;
     text-align: center;
+}
+.textblock_link_button:hover
+{
+    opacity: 1;
 }
 .textblock_link_button.activated
 {
@@ -31,7 +36,7 @@
 {
 	position: absolute;
 	right: 10px;
-	top: 10px;
+	bottom: 10px;
 }
 #textblock_toggle_buttons a, .textblock .editlink a 
 {
