update for jquery and mootools compat

--- a/mydjango/textblocks/templates/_textblock.html
+++ b/mydjango/textblocks/templates/_textblock.html
@@ -1,4 +1,6 @@
-{% load static %}{% load textblocks %}{% load url from future %}
+{% load static %}
+{% load textblocks %}
+{% load url from future %}
 {% for textblock in textblocks %}
 	{% if can_edit %}
 		{% spaceless %}
