updated jquery link and version

--- a/mydjango/textblocks/templates/_textblock_jquery.html
+++ b/mydjango/textblocks/templates/_textblock_jquery.html
@@ -1,6 +1,6 @@
 {% if perms.textblocks.change_textblock %}
 {% include "_textblock_scripts.html" %}
-<script src="//code.jquery.com/jquery.js"></script>
+<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 <script type="text/javascript">
     {% include "_textblock_jquery.js" %}
 </script>
